Mise à jour de pom.xml pour permettre l'exécution
La commande à utiliser est
mvn exec:java

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>calculator.CalculatorMain</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
