Added class diagram documentation
Signed-off-by: Tom Mens <tom.mens@umons.ac.be>

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>calculator.CalculatorMain</mainClass>
+                    <mainClass>calculator.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
