--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <cucumber.version>6.9.1</cucumber.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.surefire.version>2.22.2</maven.surefire.version>
+        <jacoco.version>0.8.2</jacoco.version>
+        <javadoc.version>2.10.4</javadoc.version>
     </properties>
 
     <dependencies>
@@ -85,7 +87,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.2</version>
+                <version>${jacoco.version}</version>
                 <executions>
                     <!--configures testing coverage-->
                     <execution>
@@ -108,7 +110,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>${javadoc.version}</version>
                 <configuration>
                     <!--needed to prevent module problem-->
                     <detectJavaApiLink>false</detectJavaApiLink>
