Excluding main from Jacoco coverage.
Signed-off-by: Damien Legay <none@none.com>

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>calculator/Main.class</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
 
             <plugin>
