--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-# This workflow will build a Java project with Maven
+# This workflow builds a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
 name: Java CI with Maven
@@ -22,3 +22,8 @@ jobs:
         java-version: 11
     - name: Build with Maven (including running of all tests)
       run: mvn -B package --file pom.xml
+      
+    - name: Generate JaCoCo Badge
+      uses: cicirello/jacoco-badge-generator@v2
+      with:
+        generate-coverage-badge: true
