--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,12 +36,12 @@ jobs:
         echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
         echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
         
-    - name: Commit and push the badge (if it changed)
+    - name: Commit and push the svg badges and the json coverage summary (if it changed)
       uses: EndBug/add-and-commit@v7
       with:
         default_author: github_actions
         message: 'commit badge'
-        add: '*.svg'
+        add: '*.svg *.json'
         
     - name: Upload JaCoCo coverage report
       uses: actions/upload-artifact@v2
