--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,7 @@ jobs:
       uses: EndBug/add-and-commit@v7
       with:
         default_author: github_actions
-        message: 'commit badge'
+        message: 'commit coverage badge and summary'
         add: '*.svg *.json'
         
     - name: Upload JaCoCo coverage report
@@ -48,3 +48,16 @@ jobs:
       with:
         name: jacoco-report
         path: target/site/jacoco/
+        
+    - name: Comment on PR with coverage percentages
+      if: ${{ github.event_name == 'pull_request' }}
+      run: |
+        REPORT=$(<.github/badges/coverage-summary.json)
+        COVERAGE=$(jq -r '.coverage' <<< "$REPORT")%
+        BRANCHES=$(jq -r '.branches' <<< "$REPORT")%
+        NEWLINE=$'\n'
+        BODY="## Test Coverage Summary ${NEWLINE}* __Coverage:__ ${COVERAGE}${NEWLINE}* __Branches:__ ${BRANCHES}"
+        gh pr comment ${{github.event.pull_request.number}} -b "${BODY}"
+      continue-on-error: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
