--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Set up with Java 17
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: 17
     - name: Build with Maven (including running of all tests)
       run: mvn -B package --file pom.xml
