--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: 17
+        cache: 'maven'
     - name: Build with Maven (including running of all tests)
       run: mvn -B package --file pom.xml
       
