Add a parser for the time calculator and new methods and test for MyTime

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,26 @@
                 </executions>
                 <configuration>
                     <packageName>calculatorParser</packageName>
+                    <cupDefinition>src/main/cup/parser.cup</cupDefinition>
+                    <className>parser</className>
+                    <symbolsName>sym</symbolsName>
+                    <outputDirectory>src/main/java/</outputDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.vbmacher</groupId>
+                <artifactId>cup-maven-plugin</artifactId>
+                <version>11b-20160615-2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <packageName>timeCalculatorParser</packageName>
+                    <cupDefinition>src/main/cup/time_parser.cup</cupDefinition>
                     <className>parser</className>
                     <symbolsName>sym</symbolsName>
                     <outputDirectory>src/main/java/</outputDirectory>
