fix Jar file new class Loader to load fxml inside the jar or outside add maven plugin to create jar with full depedencies add a Main class to call the gui lunch (without this : Error: JavaFX runtime components are missing, and are required to run this application.)

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
     <groupId>calculator</groupId>
     <artifactId>calculator-cucumber</artifactId>
     <version>0.4.3</version>
-    <packaging>jar</packaging>
     <name>Calculator with Cucumber tests</name>
 
     <properties>
@@ -25,6 +24,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.3</version>
+            <type>maven-plugin</type>
+        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
@@ -86,6 +91,19 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>calculator.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
@@ -106,14 +124,6 @@
                 <version>3.1.0</version>
                 <configuration>
                     <mainClass>calculator.Main</mainClass>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>gui.CalculatorGUI</mainClass>
                 </configuration>
             </plugin>
             <plugin>
