--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,7 @@
                 <configuration>
                     <excludes>
                         <exclude>calculator/Main.class</exclude>
+                        <exclude>gui/*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
